# sparse-merkle-tree

./: .gitignore  Cargo.toml  README.md  aiken.toml
.github/workflows/: tests.yml
docs/: index.html  search-data.js
docs/aiken/: sparse_merkle_tree.html  sparse_test.html
docs/aiken/sparse_merkle_tree/: consts.html  merkle.html
docs/sparse_merkle_tree/: consts.html  merkle.html  sparse.html  sparse_test.html
lib/aiken/: sparse-merkle-tree.ak  sparse_merkle_tree_blake256.ak  sparse_merkle_tree_blake256_test.ak  sparse_test.ak
lib/aiken/sparse-merkle-tree/: consts.ak  merkle.ak  sparse.ak  sparse_test.ak
lib/aiken/sparse_merkle_tree/: merkle_blake256.ak
lib/sparse-merkle-tree/: merkle.ak  sparse.ak  sparse_test.ak
offchain/: index.test.ts  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
offchain/src/: index.test.ts  index.ts
src/: blake2b.rs  default_store.rs  error.rs  h256.rs  lib.rs  merge.rs  merkle_proof.rs  traits.rs  tree.rs
src/tests/: tree.rs
