[package]
name = "sparse-merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
cryptoxide = "0.4.4"
hex = "0.4.3"
hexlit = "0.5.5"
itertools = "0.12.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
